--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "react-universal-test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node ./app/server",
+    "client": "webpack-dev-server",
+    "build": "NODE_ENV=production webpack --progress --hide-modules"
   },
   "repository": {
     "type": "git",
@@ -61,6 +63,8 @@
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-isomorphic-tools": "^3.0.3",
     "webpack-uglify-parallel": "^0.1.3"
   },
   "dependencies": {
