--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "path": "^0.12.7",
     "postcss-loader": "^2.0.6",
     "postcss-pxtorem": "^4.0.0",
+    "prepack-webpack-plugin": "^1.1.0",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
