--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-register": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "es6-promise": "^4.1.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.7.1",
@@ -44,6 +45,7 @@
     "file-loader": "^0.11.2",
     "happypack": "^3.0.3",
     "html-webpack-plugin": "^2.29.0",
+    "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.5.0",
     "offline-plugin": "^4.7.0",
     "path": "^0.12.7",
